# PA1456_Project_Linter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json
Code/: .gitignore  CMakeLists.txt  ppp.clang-format
Code/Tests/: inputTest.cpp  mainTest.cpp  scannerTest.cpp  systemTest.cpp  testArgs.cpp
Code/include/: constants.h  fileManager.h  fs.h  inputHandler.h  resultInterpreter.h  scanner.h  testArgs.h
Code/src/: constants.cpp  fileManager.cpp  fs.cpp  inputHandler.cpp  main.cpp  resultInterpreter.cpp  scanner.cpp
Repository/: gitleaksReport.json
Tests/: configHandlerTest.cpp  inputTest.cpp  integrationTests.cpp  scannerTest.cpp  systemTest.cpp  testArgs.cpp  testConfigDefaults.json  testConfigNoScan.json
UML_Diagrams/: C4_Container_Diagram.uml  C4_Diagram.uml  UC_url_happy  UC_url_happy.uml  UML_ClassOverview.uml  UML_Interaction_UC_url_happy.uml  UML_fileRequriments.uml  UML_sequence_Diagram_URL  classLinter  classLinter.uml
include/: configHandler.h  constants.h  errorStatus.h  fileManager.h  inputHandler.h  resultInterpreter.h  scanner.h  testArgs.h
src/: configHandler.cpp  constants.cpp  fileManager.cpp  inputHandler.cpp  main.cpp  resultInterpreter.cpp  scanner.cpp
